part4/stock-api.yml
apiVersion: v1
kind: Service
metadata:
  name: stock-api
spec:
  selector:
    app: stock-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stock-api
  template:
    metadata:
      labels:
        app: stock-api
    spec:
      containers:
        - name: api
          image: widgetario/stock-api:21.03
          ports:
            - containerPort: 8080

          volumeMounts:
            - name: cache
              mountPath: /cache
      volumes:
        - name: cache
          emptyDir: {}
