part4/web.yml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: NodePort  
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: 80 
      nodePort: 30080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: widgetario/web:21.03
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web-config-volume
              mountPath: /app/secrets/api.json
              subPath: api.json
      volumes:
        - name: web-config-volume
          configMap:
            name: web-config
